fix height of facebook widget

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
             </div>
    		</div>
 <!-- facebook sidebar -->
-        <div id="facebookSideBar" class="col-xs-3 col-md-offset-1">
-         	<div class="fb-page well" data-href="https://www.facebook.com/djmattinthehat/" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/djmattinthehat"><a href="https://www.facebook.com/djmattinthehat">Matt In The Hat</a></blockquote></div></div><br><br><br><br><br><br>
+        <div class="col-xs-3 col-md-offset-1">
+         	<div class="fb-page well" data-href="https://www.facebook.com/djmattinthehat/" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-height="861" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/djmattinthehat"><a href="https://www.facebook.com/djmattinthehat">Matt In The Hat</a></blockquote></div></div><br><br><br><br><br><br>
         </div>
     </div>
 <!-- footer -->
