--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
 <!-- all that goodstuff.js  -->
     <script type="text/javascript" src="js/jquery.min.js"></script>
-	<script type="text/javascript" src="js/angular.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
 </body>
