add 2 tracks now

--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
                 <img class="picsMarginBottom" ng-src="{{ promo.product.images[1] }}" alt="something" width="24%" height="80%">
                 <img class="picsMarginBottom" ng-src="{{ promo.product.images[2] }}" alt="something" width="24%" height="80%">
                 <img class="picsMarginBottom" ng-src="{{ promo.product.images[3] }}" alt="something" width="24%" height="80%">
-                <div id="target"></div>
+                <div id="target0"></div>
+                <div id="target1"></div>
             </div>
    		</div>
 <!-- facebook sidebar -->
